@@ -27,7 +27,6 @@
 #include <dataclasses/Utility.h>
 #include <icetray/OMKey.h>
 
-
 static const unsigned i3domcalibration_version_ = 12;
 static const unsigned linearfit_version_ = 0;
 static const unsigned quadraticfit_version_ = 0;
@@ -124,7 +123,9 @@ struct SPEChargeDistribution
                             gaus_width(NAN),
                             compensation_factor(NAN),
                             SLC_gaus_mean(NAN),
-                            mean_charge(NAN) { }
+                            mean_charge(NAN),
+                            variance(NAN),
+                            max_residual(NAN){ }
 
   SPEChargeDistribution(double amp_exp1,
                         double width_exp1,
@@ -144,7 +145,9 @@ struct SPEChargeDistribution
       gaus_width(width_gaus),
       compensation_factor(factor_compensation),
       SLC_gaus_mean(gaus_mean_SLC),
-      mean_charge(NAN) { }
+      mean_charge(NAN),
+      variance(NAN),
+      max_residual(NAN){ }
 
   double exp1_amp;
   double exp1_width;
@@ -159,6 +162,8 @@ struct SPEChargeDistribution
   ///This quantity is derived from others lazily, so it is does not participate in serialization or
   ///comparison.
   mutable double mean_charge;
+  mutable double variance;
+  mutable double max_residual;
 
   bool IsValid() const
   {
@@ -174,12 +179,41 @@ struct SPEChargeDistribution
 		   !std::isnan(SLC_gaus_mean));
   }
   
-  ///Evaluate the mean of the SPE template distribution without the residual correction for now
+  ///Evaluate the mean and standard deviation of the SPE template distribution
   double Mean() const
   {
-    if(std::isnan(mean_charge))
+    if(std::isnan(mean_charge)){
       mean_charge=ComputeMeanCharge();
+    }
     return mean_charge;
+  }
+  double StdDev() const
+  {
+    if(std::isnan(variance)){
+      variance=ComputeChargeVariance();
+    }
+    return std::sqrt(variance);
+  }
+
+  double GetMaxResidual() const
+  {
+    if(std::isnan(max_residual))
+      max_residual = *std::max_element(yData, yData+correctionSize);
+    return max_residual;
+  }
+
+  double ComputeResidual(double q) const{
+    int i = 0;                            // find left end of interval for interpolation
+    if ( q >= xData[correctionSize - 2] ) // special case: beyond right end
+      i = correctionSize - 2;
+    else {
+      i = std::distance(xData, std::lower_bound(xData, xData+correctionSize, q));
+      if(i) i--;
+    }
+    double xL = xData[i], yL = yData[i], xR = xData[i+1], yR = yData[i+1];
+    double dydx = ( yR - yL ) / ( xR - xL );
+    double y = yL + dydx * ( q - xL );
+    return y;
   }
 
   bool operator==(const SPEChargeDistribution& rhs) const
@@ -199,52 +233,22 @@ struct SPEChargeDistribution
   {
     return !operator==(rhs);
   }
-
-  ///Evaluate the probability density for amplification of a photoelectron
-  ///to a particular charge
-  ///\param q the amplification charge in units of the ideal amplification
-  /*
+  
   double operator()(double q) const{
-     double e=(q-gaus_mean)/gaus_width;
-     return(exp1_amp*exp(-q/exp1_width)
-	        + exp2_amp*exp(-q/exp2_width)
-			+ gaus_amp*exp(-.5*e*e));
+    double y = ComputeResidual(q); 
+    double e=(q-gaus_mean)/gaus_width;
+    return y*(exp1_amp*exp(-q/exp1_width)
+              + exp2_amp*exp(-q/exp2_width)
+              + gaus_amp*exp(-.5*e*e));
   }
-  */
-
-    double operator()(double q) const{
-        double yData[] = {1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0078185220290956, 1.0042299812007673, 0.9935908344034875, 0.9850454543557308, 0.9726915954383835, 0.9697828027792773, 0.9652743986792529, 0.9678607318783602, 0.9710489835385085, 0.9779325024066567, 0.9851805409942587, 0.9917270505917856, 0.9996406452735341, 1.0068567044292451, 1.017735687531788, 1.0267751591351273, 1.0370993434166467, 1.044744857399972, 1.0573247280549134, 1.0625672697852353, 1.0746265958307744, 1.0811289116634608, 1.0895461845600405, 1.0969954086913443, 1.102224227160381, 1.1080791739726892, 1.1124879641850856, 1.1167398762419734, 1.1191118871969707, 1.1225845994808588, 1.1228561156113273, 1.1214733538285444, 1.1201466033159877, 1.119017891198713, 1.117034774252846, 1.114784420031669, 1.1106707843428119, 1.1046761249652928, 1.1004126244552774, 1.0971385151354633, 1.0917037242585172, 1.0851977267453712, 1.0803033012303216, 1.072758138133644, 1.067524998209676, 1.0625850059075657, 1.0555095359234306, 1.0509622181928957, 1.0440128255959997, 1.0395139814809693, 1.0354914927244894, 1.0310352119539496, 1.0267994142473922, 1.0218812500846572, 1.01668830547869, 1.0147294646372143, 1.0109961001746626, 1.0088071581605818, 1.0056045189846852, 1.0042154120061508, 1.0010489798770452, 0.9986921110064382, 0.9988728971422061, 0.9970854046567016, 0.9968106821162841, 0.9963693247219644, 0.9941273798848427, 0.9958665014503302, 0.9949889009733639, 0.9959272341615341, 0.9955380608193667, 0.996792440853806, 0.9961095310945263, 0.9961005008737484, 0.9973811405595548, 0.9988258893905738, 0.9980287475191254, 0.9991263792520673, 1.000596123699185, 1.0017720700471255, 1.0030773292152362, 1.0016553887740836, 1.0026409396829936, 1.0025133670051922, 1.0035085128801953, 1.0};
-
-        double xData[] = {0.0, 0.0025, 0.0125, 0.0225, 0.0325, 0.042499999999999996, 0.052500000000000005, 0.0625, 0.07250000000000001, 0.0825, 0.0925, 0.10250000000000001, 0.1125, 0.1225, 0.1325, 0.14250000000000002, 0.1525, 0.1625, 0.17250000000000001, 0.1825, 0.1925, 0.2025, 0.2125, 0.2225, 0.2325, 0.2425, 0.2525, 0.2625, 0.2725, 0.28250000000000003, 0.2925, 0.3025, 0.3125, 0.3225, 0.3325, 0.3425, 0.35250000000000004, 0.3625, 0.3725, 0.3825, 0.3925, 0.4025, 0.41250000000000003, 0.4225, 0.4325, 0.4425, 0.4525, 0.4625, 0.47250000000000003, 0.4825, 0.4925, 0.5025, 0.5125, 0.5225, 0.5325, 0.5425, 0.5525, 0.5625, 0.5725, 0.5825, 0.5925, 0.6025, 0.6125, 0.6225, 0.6325000000000001, 0.6425000000000001, 0.6525000000000001, 0.6625000000000001, 0.6725000000000001, 0.6825000000000001, 0.6925000000000001, 0.7025, 0.7124999999999999, 0.7224999999999999, 0.7324999999999999, 0.7424999999999999, 0.7525, 0.7625, 0.7725, 0.7825, 0.7925, 0.8025, 0.8125, 0.8225, 0.8325, 0.8425, 0.8525, 0.8625, 0.8725, 0.8825000000000001, 0.8925000000000001, 0.9025000000000001, 0.9125000000000001, 0.9225000000000001, 0.9325000000000001, 0.9425000000000001, 0.9525000000000001, 0.9624999999999999, 0.9724999999999999, 0.9824999999999999, 0.9924999999999999, 5.0};
-
-        int size = sizeof(xData)/sizeof(*xData);
-
-        int i = 0;                                                                  // find left end of interval for interpolation
-        if ( q >= xData[size - 2] )                                                 // special case: beyond right end
-        {
-          i = size - 2;
-        }
-        else
-        {
-          i = std::lower_bound(xData, xData+size, q) - xData;
-          if(i)
-          {
-            i--;
-          }
-        }
-        double xL = xData[i], yL = yData[i], xR = xData[i+1], yR = yData[i+1];
-        double dydx = ( yR - yL ) / ( xR - xL );
-        double y = yL + dydx * ( q - xL );
-        
-        double e=(q-gaus_mean)/gaus_width;
-        return y*(exp1_amp*exp(-q/exp1_width)
-                + exp2_amp*exp(-q/exp2_width)
-                + gaus_amp*exp(-.5*e*e));
-    }
-	
+  
 private:
   double ComputeMeanCharge() const;
+  double ComputeChargeVariance() const;
 
+  static const unsigned int correctionSize;
+  static const double xData[];
+  static const double yData[];
 };
 
 I3_CLASS_VERSION(SPEChargeDistribution, SPEChargeDistribution_version_);
